--- a/src/pages/Payment/style.css
+++ b/src/pages/Payment/style.css
@@ -15,6 +15,7 @@ select {
   font-size: 18px;
   margin: 10px 0 20px 0;
   max-width: 100%;
+  min-width: 50px;
   padding: 10px 14px;
   box-shadow: rgba(50, 50, 93, 0.14902) 0px 1px 3px,
     rgba(0, 0, 0, 0.0196078) 0px 1px 0px;
